--- a/apps/frontend/index.html
+++ b/apps/frontend/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>포동포동 퀴즈</title>
+    <link rel="icon" type="image/png" href="/logo.png" />
   </head>
   <body>
-    <script src="./src/main.tsx"></script>
+    <script type="module" src="/src/main.tsx"></script>
+    <div id="root"></div>
   </body>
 </html>
